[package]
name = "shiny_leptos_showcase-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7.4", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.77"
shiny-wasm-bindings = "0.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
itertools = "0.14.0"
